# libctp-sys

./: .gitignore  Cargo.toml  README.md  auto_bind.rs  build.rs
ctp-build/: Cargo.toml
ctp-build/src/: main.rs
ctp-sys/: Cargo.toml  build.rs
doc/: v6.7.2_202309_tradeapi升级说明.txt
doc/demo期货api-6.6.8/: demo_program.sln
doc/demo期货api-6.6.8/demo/: demo.filters  demo.vcxproj.filters  stdafx.cpp  stdafx.h  traderApi.cpp  traderSpi.h
examples/: Cargo.toml  mdapi.rs  tdapi.rs
libctp-build/: Cargo.toml
libctp-build/src/: auto_bind.rs
libctp-sys/: Cargo.toml  build.rs
libctp-sys/cxx/: wrapper.cpp  wrapper.hpp
libctp-sys/src/: bindings.rs  bindings_linux.rs  lib.rs
libctp-sys/traderapi/include/: error.xml
src/: lib.rs
traderapi/: VERSION
traderapi/doc/: 6.7.2_API接口说明.chm
traderapi/doc/demo期货api-6.6.8/demo/: DataCollect.h  config.ini  define.h  demo.vcxproj  getconfig.cpp  getconfig.h  main.cpp  main.h  output.h  syslog.txt  time.h  traderApi.h  traderSpi.cpp
traderapi/doc/futureapi_6.3.15_demo/6.3.15_demo/: getconfig.cpp  main.cpp  main.h  output.h  stdafx.cpp  stdafx.h  traderApi.h  traderSpi.h
traderapi/include/: ThostFtdcTraderApi.h  error.xml
traderapi/lib/win32/: thostmduserapi_se.lib  thosttraderapi_se.lib
