[package]
name = "libctp-sys"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/unknown-marketwizards/ctp-rs"
keywords = ["futures", "ctp"]
readme = "../README.md"
description = "Rust bindings to CTP API"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }